ecmascript/parser/tests/test262-error-references/fail/15de970e269ae56f.js.stderr
error: Cannot assign to this
 --> $DIR/tests/test262-parser/fail/15de970e269ae56f.js:1:1
  |
1 | (1 + 1) = 10
  | ^^^^^^^

